# juce_hello

./: AnalyserComponent.cpp  AnalyserComponent.h  AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  MainComponent.cpp  MainComponent.h  MyProcessor.cpp  MyProcessor.h  README.md  main.cpp  recordingthumbnail.h
